Adding CSS styles to the pages

--- a/recipes/rice.html
+++ b/recipes/rice.html
@@ -3,26 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>Recipe-Rice</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h2>Rice</h2>
-    <img src="../images/rice.avif" alt="Rice" height="500" width="500"/>
-    <p>One of the most cooked dish in Sub-Saharan African countries</p>
-    <h4>Ingredients</h4>
-    <ul>
-        <li>2 cups of rice</li>
-        <li>1 table spoons of salt</li>
-        <li>2 table spoons of oil</li>
-    </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>Add water to the rice cooker</li>
-        <li>Wash rice and add to the rice cooker</li>
-        <li>Add salt and oil and mix</li>
-        <li>Set the rice cooker to cook for 10 minutes</li>
-        <li>After the ten minutes the dish is done</li>
-    </ol>
+    <div class="content">
+        <div class="header">
+            <a href="../index.html">Home</a>
+            <h2>Rice</h2>
+        </div>
+        <img src="../images/rice.avif" alt="Rice" height="500" width="500"/>
+        <div class="description">
+            <p>One of the most cooked dish in Sub-Saharan African countries</p>
+            <h4>Ingredients</h4>
+            <ul>
+                <li>2 cups of rice</li>
+                <li>1 table spoons of salt</li>
+                <li>2 table spoons of oil</li>
+            </ul>
+            <h4>Steps</h4>
+            <ol>
+                <li>Add water to the rice cooker</li>
+                <li>Wash rice and add to the rice cooker</li>
+                <li>Add salt and oil and mix</li>
+                <li>Set the rice cooker to cook for 10 minutes</li>
+                <li>After the ten minutes the dish is done</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
