--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/chocolate_cake.html">Chocolate Cake</a></li>
-        <li><a href="recipes/rice.html">Rice</a></li>
-        <li><a href="recipes/ugali.html">Ugali</a></li>
-    </ul>
+    <div class="content">
+        <h1>Odin Recipes</h1>
+        <div class="links">
+            <ul>
+                <li><a href="recipes/chocolate_cake.html">Chocolate Cake</a></li>
+                <li><a href="recipes/rice.html">Rice</a></li>
+                <li><a href="recipes/ugali.html">Ugali</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
