--- a/recipes/ugali.html
+++ b/recipes/ugali.html
@@ -3,23 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/styles.css">
     <title>Recipe-Ugali</title>
 </head>
 <body>
-    <a href="../index.html">Home</a>
-    <h2>Ugali</h2>
+    <div class="content">
+        <div class="header">
+            <a href="../index.html">Home</a>
+            <h2>Ugali</h2>
+        </div>
     <img src="../images/ugali.webp" alt="Rice" height="500" width="500"/>
-    <p>One of the most cooked dish in Sub-Saharan African countries</p>
-    <h4>Ingredients</h4>
-    <ul>
-        <li>4 cups of maize flour</li>
-        <li>2 cups of water</li>
-        <li>2 table spoons of oil</li>
-    </ul>
-    <h4>Steps</h4>
-    <ol>
-        <li>Boil water into the pot</li>
-        <li>After water is boiled add flour slowly while mixing until it is cooked</li>
-    </ol>
+        <div class="description">
+            <p>One of the most cooked dish in Sub-Saharan African countries</p>
+            <h4>Ingredients</h4>
+            <ul>
+                <li>4 cups of maize flour</li>
+                <li>2 cups of water</li>
+                <li>2 table spoons of oil</li>
+            </ul>
+            <h4>Steps</h4>
+            <ol>
+                <li>Boil water into the pot</li>
+                <li>After water is boiled add flour slowly while mixing until it is cooked</li>
+            </ol>
+        </div>
+    </div>
 </body>
 </html>
